--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "smarty/smarty": "^3.1",
         "doctrine/orm": "^2.7",
         "phpmailer/phpmailer": "^6.2",
-        "mobicms/captcha": "^1.0"
+        "mobicms/captcha": "^1.0",
+        "symfony/cache": "^4.4"
     },
     "autoload": {
         "classmap": [
